# zebra

./: .gdbinit  .gitignore  Cargo.toml  build.rs  flake.nix  justfile  overlay.nix  rust-toolchain.toml
.cargo/: config.toml
apps/hello/: Cargo.toml
apps/hello/src/: main.rs
apps/init/: Cargo.toml
apps/init/src/: main.rs
apps/log/: Cargo.toml
apps/log/src/: lib.rs  main.rs
apps/shell/: Cargo.toml  build.rs
apps/shell/src/: main.rs
apps/ustar/: Cargo.toml
apps/ustar/src/: lib.rs  main.rs
apps/virtio/: Cargo.toml
apps/virtio/src/: block_device.rs  lib.rs  main.rs  queue.rs
docs/riscv-plic/: default.nix
docs/xv6-riscv-book/: default.nix
kernel/: Cargo.toml  build.rs  default.nix  link.ld  virt.ld
kernel/src/: elf.rs  entry.asm  ipc.rs  language_items.rs  main.rs  page.rs  plic.rs  power.rs  process.rs  spinlock.rs  test.rs  uart.rs
kernel/src/asm/: entry.s  switch.s  symbols.s
kernel/src/fairy/: mod.rs  program.rs  symbol.rs
kernel/src/memory/: allocator.rs  mod.rs  page.rs  sections.rs
kernel/src/process/: context_switch.asm  context_switch.s  interrupt.rs  mod.rs  (+3 more)
librs/: Cargo.toml  link.ld
librs/src/: ipc.rs  language_items.rs  lib.rs  print.rs  syscall.rs
libs/fairy/: Cargo.toml
libs/librs/: Cargo.toml  build.rs
libs/syscall/: Cargo.toml
libs/uart/: Cargo.toml
resources/: default.nix
resources/device-trees/: qemu-virt.dtb
resources/riscv-aclint/: default.nix
resources/riscv-privileged-isa-manual/: default.nix
resources/xv6-riscv-book/: dont-clone-src.patch
test-bin/: Cargo.toml
test-bin/src/: main.rs
(+23 files in other folders)
