[workspace]
members = ["kernel", "apps/*", "libs/*"]

# Drastically improve binary sizes, at the cost of compile time.
# This is used because the filesystem is currently very slow.
[profile.release]
opt-level = "z" # Optimize for size.
strip = true # Automatically strip symbols from the binary.
lto = true # Enable link-time optimizations.
